# crystal

./: .gitignore  CHANGELOG.md  README.md  backend_test.py  design_guidelines.json
project-crystal/crystal-guard/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  backend_test.py  pyproject.toml
project-crystal/crystal-guard/.github/: PULL_REQUEST_TEMPLATE.md
project-crystal/crystal-guard/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_stack_rules.md
project-crystal/crystal-guard/.github/workflows/: crystal.yml
project-crystal/crystal-guard/docs/: CI-CD-SETUP.md  GETTING-STARTED.md  GROWTH-STRATEGY.md  HACKER-NEWS-POST.md  LAUNCH-CONTENT.md  MCP-SETUP.md  PITCH-DECK.md  PUBLISHING.md  RELEASE-NOTES-v0.3.0.md
project-crystal/crystal-guard/examples/case-study/: CASE-STUDY.md
project-crystal/crystal-guard/examples/case-study-todo-app/: CASE-STUDY.md
project-crystal/crystal-guard/examples/case-study-todo-app/before/: package.json  (+1 more)
project-crystal/crystal-guard/src/crystal_guard/: __init__.py  agent.py  architect.py  badge.py  baseline.py  cli.py  config.py  debt.py  detector.py  fix_prompt.py  fixers.py  handoff.py  pipeline.py  test_runner.py
project-crystal/crystal-guard/tests/: conftest.py  test_agent.py  test_architecture.py  test_badge.py  test_cli.py  test_config.py  test_dependencies.py  test_domain.py  test_fix_prompt.py  test_fixers.py  test_handoff.py  test_misc.py  test_pipeline.py  test_placeholders.py  test_reporters.py  test_scoring.py  test_security.py  test_test_runner.py
(+75 files in other folders)
