[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystal-code"
version = "0.1.0"
description = "Architecture guardian for vibe-coded projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["mcp", "architecture", "code-quality", "vibe-coding", "ai-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.1.0"]
agent = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
crystal = "crystal_guard.cli:app"

[project.urls]
Homepage = "https://crystalcodes.dev"
Repository = "https://github.com/ashimnandi-trika/crystal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crystal_guard = ["rules/builtin/*.yaml"]
